add event loop models and class
- add simple event loop logic
- add json-ld event loop metamodel
- add query and frame for processing event loop models
- add event loop model for pickup behaviour
- add unittest for processing event loops

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,11 @@ classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
 ]
+dependencies = [
+  'rdflib',
+  'pyld'
+]
 
 [project.urls]
 "Homepage" = "https://github.com/minhnh/bdd-dsl"
 "SESAME Project" = "https://www.sesame-project.org/"
-
