modify query to include event loop data
- create event loop and behaviour tree in create_bt_from_graph
- move dictionary parsing and object creation to separate function
- reformat with black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,9 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/minhnh/bdd-dsl"
 "SESAME Project" = "https://www.sesame-project.org/"
+
+[tool.ruff]
+line-length = 100
+
+[tool.black]
+line-length = 100
